--- a/teaching/index.html
+++ b/teaching/index.html
@@ -59,7 +59,7 @@
         }
         footer>nav>ul{display: flex; flex-wrap: wrap;}
         footer>nav>ul>li{flex: 1 1 10% ;}
-        @media screen and (min-width:1024px;){
+        @media screen and (min-width:1024px){
             footer{
             display: grid;
             grid-template-columns: 1vw minmax(20ch, auto) 1vw ;
@@ -76,7 +76,7 @@
 <body>
 
    <header class="main-header">
-       <a href="#"><img src="#" alt="" class="log"></a>
+       <a href="#"><img src="logo.png" alt="" class="log"></a>
        <nav class="main-menu">
            <ul class="main-menu-list">
                <li class="menu-item"><a href="/page1.html">huudas1</a></li>
