--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div  class="header-background">
-    <img class="header-img" src="https://picsum.photos/900/80.webp" alt="this web page's header logo">
+    <img class="header-img" src="https://picsum.photos/500/80.webp?transparent" alt="this web page's header logo">
     </div>
     </header>
     <aside class="aside-class">
