--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cyber Security</title>
     <link rel="stylesheet" href="main.css">
     <title>Self-Cyber security</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin="">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
 </head>
 <body>
 
     <header>
         <div  class="header-background">
-    <img class="header-img" src="/images/hacker.svg" alt="this web page's header logo">
+    <img class="header-img" src="images/hacker.svg" alt="this web page's header logo">
     </div>
     </header>
     <div id="mySidenav" class="sidenav">
@@ -27,7 +29,7 @@
     <main>
         
         <section class="latest-exploits">
-            <h2 style="margin-top:0px">Latest Exploit</h2>
+            <h2 style="margin-top:0px;text-align:center">ХАК ХИЙХ АРГА БАРИЛУУД</h2>
             <div class="news-card-list">
                    <article class="default-news-card">
                         <div class="new_news">
