--- a/news1.html
+++ b/news1.html
@@ -7,12 +7,13 @@
     <title>WIFI hack</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="news.css">    
     <script src='main.js'></script>
 </head>
 <body>
     <header>
         <div  class="header-background">
-    <img class="header-img" src="/images/hacker.svg" alt="this web page's header logo">
+    <img class="header-img" src="images/hacker.svg" alt="this web page's header logo">
     </div>
     </header>
     <div id="mySidenav" class="sidenav">
@@ -29,9 +30,11 @@
         WIFI хак хийх
     </h1>
     <p>
+        <img src="images/news1.svg" style="display:block;margin:auto;" width="700px"; height="550px"; >
         Мэдээллийн аюулгүй байдал, 
         сүлжээний бодлогууд дээр өөрийн ур чадварыг шалган оноо цуглуулан бусадтай хөгжөөнт 
-        байдлаар бусадтайгаа өрсөлдөх 
+        байдлаар бусадтайгаа өрсөлдөх
+        <span class="code_in_shell"><span class="prompt_name">kali@kali:~$</span> airmon-ng start wlan0 </span>
     </p>
 
               </section>
