--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyber Security</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
     <title>Self-Cyber security</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin="">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
 </head>
 <body>
 
@@ -25,11 +25,11 @@
         <a href="#">WIFI ХАК</a>
         <a href="#">MR.ROBOT ХАК</a>    
       </div>
-      <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; MENU</span>
+      <span style="font-size:30px;cursor:pointer;font-family:'Exo 2', 'sans-serif';" onclick="openNav()">&#9776; MENU</span>
     <main>
         
         <section class="latest-exploits">
-            <h2 style="margin-top:0px;text-align:center">ХАК ХИЙХ АРГА БАРИЛУУД</h2>
+            <h2 class="main_article" style="margin-top:0px;text-align:center;font-family:'Exo 2','sans-serif';">ХАК ХИЙХ АРГА БАРИЛУУД</h2>
             <div class="news-card-list">
                    <article class="default-news-card">
                         <div class="new_news">
