--- a/news1.html
+++ b/news1.html
@@ -7,7 +7,9 @@
     <title>WIFI hack</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="news.css">    
+    <link rel="stylesheet" href="news.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">    
     <script src='main.js'></script>
 </head>
 <body>
@@ -23,19 +25,20 @@
         <a href="#">WIFI ХАК</a>
         <a href="#">MR.ROBOT ХАК</a>    
       </div>
-      <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; MENU</span>
+      <span style="font-size:30px;cursor:pointer;font-family:'Exo 2','sans-serif';" onclick="openNav()">&#9776; MENU</span>
     <main>
               <section class="more-news">
     <h1 class="more_news_h1">
         WIFI хак хийх
     </h1>
-    <p>
+    <article>
         <img src="images/news1.svg" style="display:block;margin:auto;" width="700px"; height="550px"; >
-        Мэдээллийн аюулгүй байдал, 
+        <p class="main_p"> Мэдээллийн аюулгүй байдал, 
         сүлжээний бодлогууд дээр өөрийн ур чадварыг шалган оноо цуглуулан бусадтай хөгжөөнт 
         байдлаар бусадтайгаа өрсөлдөх
+        </p>
         <span class="code_in_shell"><span class="prompt_name">kali@kali:~$</span> airmon-ng start wlan0 </span>
-    </p>
+    </article>
 
               </section>
 
