--- a/news1.html
+++ b/news1.html
@@ -6,11 +6,9 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>WIFI hack</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src='main.js'></script>
 </head>
 <body>
@@ -33,7 +31,7 @@
         WIFI хак хийх
     </h1>
     <article>
-        <img src="images/news1.svg" style="display:block;margin:auto;" width="700px"; height="550px"; >
+        <img src="images/news1.svg" class="max-width-100-height-auto">
         <p class="main_p"> Мэдээллийн аюулгүй байдал, 
         сүлжээний бодлогууд дээр өөрийн ур чадварыг шалган оноо цуглуулан бусадтай хөгжөөнт 
         байдлаар бусадтайгаа өрсөлдөх
