--- a/news1.html
+++ b/news1.html
@@ -7,6 +7,7 @@
     <title>WIFI hack</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="section.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">    
     <script src='main.js'></script>
