--- a/news1.html
+++ b/news1.html
@@ -6,8 +6,9 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>WIFI hack</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="section.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/news.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">    
     <script src='main.js'></script>
@@ -38,49 +39,96 @@
         байдлаар бусадтайгаа өрсөлдөх
         </p>
         <span class="code_in_shell"><span class="prompt_name">kali@kali:~$</span> airmon-ng start wlan0 </span>
+        <p class="main_p">
+            is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+            been the industry's standard dummy text ever since the 1500s, when an unknown 
+            printer took a galley of type and scrambled it to make a type specimen book. 
+            It has survived not only five centuries, but also the leap into electronic typesetting, 
+            remaining essentially unchanged. It was popularised in the 1960s with the release of 
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+            software like Aldus PageMaker including versions of Lorem Ipsum
+        </p>
+        <h2 class="more_news_h2">
+            Subtitle
+        </h2>
+        <p class="main_p">
+            is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+            been the industry's standard dummy text ever since the 1500s, when an unknown 
+            printer took a galley of type and scrambled it to make a type specimen book. 
+            It has survived not only five centuries, but also the leap into electronic typesetting, 
+            remaining essentially unchanged. It was popularised in the 1960s with the release of 
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+            software like Aldus PageMaker including versions of Lorem Ipsum
+            is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+            been the industry's standard dummy text ever since the 1500s, when an unknown 
+            printer took a galley of type and scrambled it to make a type specimen book. 
+            It has survived not only five centuries, but also the leap into electronic typesetting, 
+            remaining essentially unchanged. It was popularised in the 1960s with the release of 
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+            software like Aldus PageMaker including versions of Lorem Ipsum
+            is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+            been the industry's standard dummy text ever since the 1500s, when an unknown 
+            printer took a galley of type and scrambled it to make a type specimen book. 
+            It has survived not only five centuries, but also the leap into electronic typesetting, 
+            remaining essentially unchanged. It was popularised in the 1960s with the release of 
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+            software like Aldus PageMaker including versions of Lorem Ipsum
+            is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+            been the industry's standard dummy text ever since the 1500s, when an unknown 
+            printer took a galley of type and scrambled it to make a type specimen book. 
+            It has survived not only five centuries, but also the leap into electronic typesetting, 
+            remaining essentially unchanged. It was popularised in the 1960s with the release of 
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+            software like Aldus PageMaker including versions of Lorem Ipsum
+        </p>
+        <img src="news_img/shoo.png" class="max-width-100-height-auto">
+        <h2 class="more_news_h2">
+            Conclusion
+        </h2>
+        <p class="main_p">
+            is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+            been the industry's standard dummy text ever since the 1500s, when an unknown 
+            printer took a galley of type and scrambled it to make a type specimen book. 
+            It has survived not only five centuries, but also the leap into electronic typesetting, 
+            remaining essentially unchanged. It was popularised in the 1960s with the release of 
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+            software like Aldus PageMaker including versions of Lorem Ipsum
+        </p>
     </article>
 
               </section>
 
     </main>
     <footer>
-        <ul class="main-ul-footer">
-           <li class="footer-sub-li">
-               <h5>Copy right</h5>
-               <ul >
-                   <li>Hackerone</li>
-                   <li>BugCrowd</li>
-                   <li>Youtube</li>
-                   <li>Facebook</li>
-               </ul>
-           </li>
-           <li class="footer-sub-li">
-             <h5>Contact info</h5>
-             <ul>
-                 <li>Mobile:12345</li>
-                 <li>email:unuruu@bsuteam.com</li>
-                 <li>Address:Ulaanbaatar</li>
-             </ul>
-         </li>
-         <li class="footer-sub-li">
-             <h5>About us</h5>
-             <ul>
-                 <li>How we started</li>
-                 <li>Years</li>
-                 <li>Expansion</li>
-                 <li>Progress</li>
-             </ul>
-         </li>
-         <li class="footer-sub-li">
-             <h5>Join us</h5>
-             <ul>
-                 <li>Job application</li>
-                 <li></li>
-                 <li></li>
-                 <li></li>
-             </ul>
-         </li>
-        </ul>
+        <footer class="footer_container">
+            <div class="footer-body">
+                <div class="footer_logo"> <img src="images/hacker.svg" style="width:4%;height:4%"> </div>
+                <div class="ft_links">
+                        <a href="#">
+                               Бидний тухай
+                        </a>
+                        <span class="short_links">|    </span>
+                        <a href="#">
+                               Холбогдох
+                        </a>
+                        <span class="short_links">|    </span>
+                        <a href="#">
+                               Ажлын байр
+                        </a>
+                        <span class="short_links">|    </span>
+                        <a href="#">
+                               Зар сурталчилгаа
+                        </a>
+                        <span class="short_links">|    </span>
+                        <a href="#">
+                               Ивээн тэтгэгчид
+                        </a>
+                        
+                </div>
+            </div>
+            <div class="footer-copyright" >
+                © 2021 Copy rights.
+            </div>
      </footer>
     
   
