mobile version update

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <section class="container">
                     <article class="item-a" id="article">
                         <a href="news1.html">  
-                      <img class="img_article" src="images/news1.svg" style="width:800px;height:460px"> 
+                      <img class="img_arc_main" src="images/news1.svg"> 
                         </a>
                       <div class="links">
                           <a href="news1.html"  id="links_div">Компьютерийн аюулгүй байдал....</a>
@@ -40,7 +40,7 @@
                     </article>
                     <article class="item-b" >
                         <a href="news1.html">
-                        <img class="img_article" src="images/news2.svg"  style="width:400px;height:210px">
+                        <img class="img_article" src="images/news2.svg">
                         </a>
                         <div class="links" >
                             <a href="news1.html"  id="links_div">Компьютерийн аюулгүй байдал....</a>
@@ -48,7 +48,7 @@
                     </article>
                     <article class="item-c" >
                         <a href="news1.html">
-                        <img class="img_article" src="images/news3.svg" style="width:400px;height:210px">
+                        <img class="img_article" src="images/news3.svg" >
                         </a>
                         <div class="links" >
                             <a href="news1.html"  id="links_div">Компьютерийн аюулгүй байдал....</a>
@@ -56,7 +56,7 @@
                     </article>
                     <article class="item-d" id="article">
                         <a href="news1.html">
-                        <img class="img_article" src="images/news4.svg" style="width:400px;height:210px">
+                        <img class="img_article" src="images/news4.svg" >
                         </a>
                         <div class="links" id="article">
                             <a href="news1.html"  id="links_div">Компьютерийн аюулгүй байдал....</a>
@@ -64,7 +64,7 @@
                     </article>
                     <article class="item-e" >
                         <a href="news1.html">
-                        <img class="img_article" src="images/news5.svg" style="width:400px;height:210px">
+                        <img class="img_article" src="images/news5.svg" >
                         </a>
                         <div class="links" id=>
                             <a href="news1.html"  id="links_div">Компьютерийн аюулгүй байдал....</a>
@@ -72,7 +72,7 @@
                     </article>
                     <article class="item-f">
                         <a href="news1.html">
-                        <img class="img_article" id="img_div" src="images/news6.svg" style="width:400px;height:210px">
+                        <img class="img_article" id="img_div" src="images/news6.svg" >
                         </a>
                         <div class="links"  >
                             <a href="news1.html" id="links_div" >Компьютерийн аюулгүй байдал....</a>
@@ -80,7 +80,7 @@
                     </article>
                     <article class="item-i">
                         <a href="news1.html">
-                        <img class="img_article" id="img_div" src="images/virus.svg" style="width:400px;height:210px">
+                        <img class="img_article" id="img_div" src="images/virus.svg" >
                         </a>
                         <div class="links"  >
                             <a href="news1.html" id="links_div" >Зар сурталчилгаа....</a>
@@ -88,7 +88,7 @@
                     </article>
                     <article class="item-h">
                         <a href="news1.html">
-                        <img class="img_article" id="img_div" src="images/virus.svg" style="width:400px;height:210px">
+                        <img class="img_article" id="img_div" src="images/virus.svg" >
                         </a>
                         <div class="links"  >
                             <a href="news1.html" id="links_div" >Зар сурталчилгаа....</a>
@@ -96,7 +96,7 @@
                     </article>
                     <article class="item-g">
                         <a href="news1.html">
-                        <img class="img_article" id="img_div" src="images/virus.svg" style="width:400px;height:210px">
+                        <img class="img_article" id="img_div" src="images/virus.svg" >
                         </a>
                         <div class="links"  >
                             <a href="news1.html" id="links_div" >Зар сурталчилгаа....</a>
@@ -108,7 +108,7 @@
        </main>
     <footer class="footer_container">
     <div class="footer-body">
-        <div class="footer_logo"> <img src="images/hacker.svg" style="width:4%;height:4%"> </div>
+        <div class="footer_logo"> <img src="images/hacker.svg" > </div>
         <div class="ft_links">
                 <a href="#">
                        Бидний тухай
