--- a/news1.html
+++ b/news1.html
@@ -33,7 +33,7 @@
         WIFI хак хийх
     </h1>
     <article>
-        <img src="images/news1.svg" class="max-width-100-height-auto">
+        <img src="images/news1.svg" class="news1_img">
         <p class="main_p"> Мэдээллийн аюулгүй байдал, 
         сүлжээний бодлогууд дээр өөрийн ур чадварыг шалган оноо цуглуулан бусадтай хөгжөөнт 
         байдлаар бусадтайгаа өрсөлдөх
@@ -81,7 +81,7 @@
             Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
             software like Aldus PageMaker including versions of Lorem Ipsum
         </p>
-        <img src="news_img/shoo.png" class="max-width-100-height-auto">
+        <img src="news_img/shoo.png" class="news1_img">
         <h2 class="more_news_h2">
             Conclusion
         </h2>
@@ -102,7 +102,7 @@
     <footer>
         <footer class="footer_container">
             <div class="footer-body">
-                <div class="footer_logo"> <img src="images/hacker.svg" style="width:4%;height:4%"> </div>
+                <div class="footer_logo"> <img src="images/hacker.svg"> </div>
                 <div class="ft_links">
                         <a href="#">
                                Бидний тухай
@@ -142,4 +142,4 @@
       document.getElementById("mySidenav").style.width = "0";
     }
     </script>
-</html>
+</html> 
