mobile version update

--- a/news1.html
+++ b/news1.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div  class="header-background">
-    <img class="header-img" src="images/hacker.svg" alt="this web page's header logo">
+            <a href="index.html"><img class="header-img" src="images/hacker.svg" alt="this web page's header logo"></a>
     </div>
     </header>
     <div id="mySidenav" class="sidenav">
