--- a/news1.html
+++ b/news1.html
@@ -33,7 +33,7 @@
         WIFI хак хийх
     </h1>
     <article>
-        <img src="images/news1.svg" class="news1_img">
+        <img src="images/news1.svg" class="news1_img" alt="this news image">
         <p class="main_p"> Мэдээллийн аюулгүй байдал, 
         сүлжээний бодлогууд дээр өөрийн ур чадварыг шалган оноо цуглуулан бусадтай хөгжөөнт 
         байдлаар бусадтайгаа өрсөлдөх
@@ -81,7 +81,7 @@
             Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
             software like Aldus PageMaker including versions of Lorem Ipsum
         </p>
-        <img src="news_img/shoo.png" class="news1_img">
+        <img src="news_img/shoo.png" class="news1_img" alt="this is rubick">
         <h2 class="more_news_h2">
             Conclusion
         </h2>
