--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <section class="container">
                     <article class="item-a" id="article">
                         <a href="news1.html">  
-                      <img class="img_arc_main" src="images/news1.svg"> 
+                      <img class="img_arc_main" src="images/news1.svg" alt="this news image"> 
                         </a>
                       <div class="links">
                           <a href="news1.html"  id="links_div">Компьютерийн аюулгүй байдал....</a>
@@ -40,7 +40,7 @@
                     </article>
                     <article class="item-b" >
                         <a href="news1.html">
-                        <img class="img_article" src="images/news2.svg">
+                        <img class="img_article" src="images/news2.svg" alt="this news image">
                         </a>
                         <div class="links" >
                             <a href="news1.html"  id="links_div">Компьютерийн аюулгүй байдал....</a>
@@ -48,7 +48,7 @@
                     </article>
                     <article class="item-c" >
                         <a href="news1.html">
-                        <img class="img_article" src="images/news3.svg" >
+                        <img class="img_article" src="images/news3.svg" alt="this news image">
                         </a>
                         <div class="links" >
                             <a href="news1.html"  id="links_div">Компьютерийн аюулгүй байдал....</a>
@@ -56,7 +56,7 @@
                     </article>
                     <article class="item-d" id="article">
                         <a href="news1.html">
-                        <img class="img_article" src="images/news4.svg" >
+                        <img class="img_article" src="images/news4.svg" alt="this news image">
                         </a>
                         <div class="links" id="article">
                             <a href="news1.html"  id="links_div">Компьютерийн аюулгүй байдал....</a>
@@ -64,7 +64,7 @@
                     </article>
                     <article class="item-e" >
                         <a href="news1.html">
-                        <img class="img_article" src="images/news5.svg" >
+                        <img class="img_article" src="images/news5.svg" alt="this news image">
                         </a>
                         <div class="links" id=>
                             <a href="news1.html"  id="links_div">Компьютерийн аюулгүй байдал....</a>
@@ -72,7 +72,7 @@
                     </article>
                     <article class="item-f">
                         <a href="news1.html">
-                        <img class="img_article" id="img_div" src="images/news6.svg" >
+                        <img class="img_article" id="img_div" src="images/news6.svg" alt="this news image">
                         </a>
                         <div class="links"  >
                             <a href="news1.html" id="links_div" >Компьютерийн аюулгүй байдал....</a>
@@ -80,7 +80,7 @@
                     </article>
                     <article class="item-i">
                         <a href="news1.html">
-                        <img class="img_article" id="img_div" src="images/virus.svg" >
+                        <img class="img_article" id="img_div" src="images/virus.svg" alt="this is an advertisement">
                         </a>
                         <div class="links"  >
                             <a href="news1.html" id="links_div" >Зар сурталчилгаа....</a>
@@ -88,7 +88,7 @@
                     </article>
                     <article class="item-h">
                         <a href="news1.html">
-                        <img class="img_article" id="img_div" src="images/virus.svg" >
+                        <img class="img_article" id="img_div" src="images/virus.svg" alt="this is an advertisement" >
                         </a>
                         <div class="links"  >
                             <a href="news1.html" id="links_div" >Зар сурталчилгаа....</a>
@@ -96,7 +96,7 @@
                     </article>
                     <article class="item-g">
                         <a href="news1.html">
-                        <img class="img_article" id="img_div" src="images/virus.svg" >
+                        <img class="img_article" id="img_div" src="images/virus.svg" alt="this is an advertisement" >
                         </a>
                         <div class="links"  >
                             <a href="news1.html" id="links_div" >Зар сурталчилгаа....</a>
