--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                         <a href="news1.html">  
                       <img class="img_arc_main" src="images/news1.svg" alt="this news image"> 
                         </a>
-                      <div class="links">
-                          <a href="news1.html"  id="links_div">Компьютерийн аюулгүй байдал....</a>
+                      <div id="app1" class="links">
+                         
                       </div> 
 
                     </article>
@@ -145,5 +145,6 @@
           document.getElementById("mySidenav").style.width = "0";
         }
         </script>
+        <script type="module" src=modules/spa.js></script>
 </body>
 </html>
